# heal-mate-ai

./: .coverage  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ai_service.py  app.py  config.py  database.py  pyproject.toml  pytest.ini  railway.json  requirements.txt  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
core/: consultation.py  state.py  user_context.py
docs/: 01_产品理念.md  02_技术选型.md  03_目录结构.md  04_前置学习路线.md  05_未来方向.md
pages/: 1_consultation.py  2_checkin.py  2_✅_今日打卡.py
repos/: auth_repo.py  checkin_repo.py  connection.py  migrations.py  plan_repo.py  profile_repo.py  tasks_repo.py  user_state_repo.py
services/: auth_service.py  checkin_service.py  history_service.py  plan_service.py  profile_service.py  user_state_service.py
src/: ai_service.py  app.py  database.py  utils.py
src/core/: consultation.py  state.py
src/pages/: 1_consultation.py  2_checkin.py  3_dashboard.py  home.py
src/repos/: auth_repo.py  checkin_repo.py  migrations.py  user_state_repo.py
src/services/: auth_service.py  checkin_service.py  history_service.py  plan_service.py  profile_service.py  short_term_state_service.py  user_state_service.py
src/ui/: test_ids.py
src/views/: 1_consultation.py  2_checkin.py  home.py
tests/: conftest.py  test_core.py  test_e2e_full_flow.py  test_e2e_smoke.py  test_repos.py  test_services.py  test_short_term_state_service.py
ui/: theme.py
views/: 1_consultation.py  2_checkin.py  home.py
