[project]
name = "healmate-ai"
version = "0.1.0"
description = "HealMate AI 健康管家"
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120
# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
